# CS6600

./: '  .gitignore  Cargo.nix  Cargo.toml  README.md  default.nix  flake.nix  shell.nix
examples/: project_1.rs
examples/project_1/: README.md  main.rs  p1.frag  p1.vert
examples/project_2/: README.md  main.rs
src/: error.rs  lib.rs  main.rs  shaders.rs  window.rs
src/attribute/: mod.rs
src/interface_blocks/: error.rs  mod.rs
src/load/: error.rs  mod.rs
src/materials/: mod.rs
src/program/: blinn_phong.rs  builder.rs  error.rs  fragment_only.rs  lights.rs  mod.rs  projection.rs
src/program/camera/: arcballcamera.rs  mod.rs
src/program/mesh/: conversions.rs  error.rs  mod.rs
src/program/scene_object/: error.rs  mod.rs
src/program/vao/: error.rs  mod.rs
src/program/vao/attribute/: mod.rs
src/shader/: blinn_phong.rs  error.rs  fragment_only.rs  mod.rs
src/uniform/: error.rs  mod.rs
src/vao/: error.rs  mod.rs
src/window/: error.rs  mod.rs
