[package]
name = "cs6600"
version = "0.1.0"
edition = "2021"
description = "cs6600"

[dependencies]
gl = "0.14.0"
glfw = { version = "0.55.0", default-features = false, features = ["wayland"]}

ultraviolet = "0.9.2"
bitflags = "2.5.0"
obj-rs = "0.7.1"
wavefront_obj = "10.0.0"
bat = "0.24.0"
rand = { version="0.8.5", features = ["small_rng"]}
